force-app/main/default/objects/CustomSync__c/CustomSync__c.object-meta.xml
<CustomObject>
    <description>Send Data to Bix</description>
    <label>Custom Sync</label>
    <nameField>
        <label>Custom Sync</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Sync</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>