force-app/main/default/objects/CustomSync__c/fields/CaseBusinessCode__c.field-meta.xml
<CustomField>
    <fullName>CaseBusinessCode__c</fullName>
    <inlineHelpText>This field only applies when the Target Object is Case.</inlineHelpText>
    <label>Case Business Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>