force-app/main/default/objects/CustomSync__c/fields/EndAt__c.field-meta.xml
<CustomField>
    <fullName>EndAt__c</fullName>
    <label>End At</label>
    <type>DateTime</type>
</CustomField>