force-app/main/default/objects/CustomSync__c/fields/MappingDataType__c.field-meta.xml
<CustomField>
    <fullName>MappingDataType__c</fullName>
    <label>Mapping Data Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>