force-app/main/default/objects/CustomSync__c/fields/PkColumn__c.field-meta.xml
<CustomField>
    <fullName>PkColumn__c</fullName>
    <defaultValue>&apos;PXEXTRACTDATETIME&apos;</defaultValue>
    <label>PK Column</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>