force-app/main/default/objects/CustomSync__c/fields/ProcessingQuantity__c.field-meta.xml
<CustomField>
    <fullName>ProcessingQuantity__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Processing quantity run on batch</description>
    <label>Processing Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>