force-app/main/default/objects/CustomSync__c/fields/RequestBodyMapping__c.field-meta.xml
<CustomField>
    <fullName>RequestBodyMapping__c</fullName>
    <label>Request Body Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>