force-app/main/default/objects/CustomSync__c/fields/StartAt__c.field-meta.xml
<CustomField>
    <fullName>StartAt__c</fullName>
    <label>Start At</label>
    <type>DateTime</type>
</CustomField>