force-app/main/default/objects/CustomSync__c/fields/SyncFailed__c.field-meta.xml
<CustomField>
    <fullName>SyncFailed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Số lượng sync Fail</description>
    <label>Sync Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>