force-app/main/default/objects/CustomSync__c/fields/SyncSuccessFully__c.field-meta.xml
<CustomField>
    <fullName>SyncSuccessFully__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Số lương sync thành công ở kỳ trước</description>
    <label>Sync SuccessFully</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>