force-app/main/default/objects/CustomSync__c/fields/SyncTo__c.field-meta.xml
<CustomField>
    <fullName>SyncTo__c</fullName>
    <label>Sync To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>