force-app/main/default/objects/CustomSync__c/fields/TableName__c.field-meta.xml
<CustomField>
    <fullName>TableName__c</fullName>
    <label>Table Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>