force-app/main/default/objects/CustomSync__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <inlineHelpText>Object Api Name</inlineHelpText>
    <label>Target Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>