force-app/main/default/objects/CustomSync__c/fields/TotalRecordSync__c.field-meta.xml
<CustomField>
    <fullName>TotalRecordSync__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Record Sync</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>