force-app/main/default/objects/CustomSync__c/fields/WhatSync__c.field-meta.xml
<CustomField>
    <fullName>WhatSync__c</fullName>
    <label>What Sync</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>