force-app/main/default/objects/CustomSync__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WhatSync__c</columns>
    <columns>SyncTo__c</columns>
    <columns>StartAt__c</columns>
    <columns>EndAt__c</columns>
    <columns>SyncFailed__c</columns>
    <columns>SyncSuccessFully__c</columns>
    <columns>ProcessingQuantity__c</columns>
    <columns>TotalRecordSync__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>